--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 	<object id="object" data="rect1.svg" type="image/svg+xml"></object><!-- 测试界面 -->
+	<button></button>
 </body>
 </html>
