--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<title>rect</title>
 </head>
 <body>
-	<object id="object" data="rect1.svg" type="image/svg+xml"></object><!-- 测试界面 -->
-	<button></button>
+	<object id="object" data="rect1.svg" type="image/svg+xml"></object>
 </body>
 </html>
